[package]
name = "spaceship_game"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_scroller = "0.3.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
